--- a/src/components/CTAButton/CTAButton.css
+++ b/src/components/CTAButton/CTAButton.css
@@ -1,34 +1,33 @@
 .cta-button {
   text-decoration: none;
   font-family: "font-bold";
-  color: var(--clr-dark-blue);
-  background-color: var(--clr-light-yellow);
+  color: var(--clr-dark-grey);
+  background-color: #ffffff;
   width: 285px;
   height: 51px;
-  border: 3px solid var(--clr-dark-blue);
+  border: 2px solid var(--clr-dark-grey);
   font-size: 16px;
   border-radius: 10px;
   position: relative;
 }
 .cta-button span {
   position: absolute;
-  top: 13px;
+  top: 15px;
   left: 25px;
 }
 .cta-button img {
-  right: -2px;
+  right: -3px;
   top: -2px;
-  width: 50px;
+  width: 51px;
   position: absolute;
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
 }
 .cta-button:hover {
-  background-color: var(--clr-dark-yellow);
+  background-color: #f5f5f5;
 }
 @media screen and (max-width: 480px) {
   .cta-button {
-    border: 2px solid var(--clr-dark-blue);
     font-size: 12px;
     width: 220px;
     height: 41px;
